Fix problem running 'sbt package' with new Spark testing stuff in there.