@@ -26,17 +26,19 @@ libraryDependencies ++= Seq(
 )
 
 // Spark testing: uses SBT plugin for Spark packages as well (see project.plugins.sbt)
+// Specify Spark version for the Spark testing plugin
+sparkVersion := Versions.spark
 
 spDependencies += "holdenk/spark-testing-base:1.5.2_0.3.3"
 
+spIgnoreProvided := false
+
 parallelExecution in Test := false
 
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:+CMSClassUnloadingEnabled")
 
-
+// Additional repo resolvers
 resolvers ++= Seq(
-  // allows us to include spark packages (not sure how well this works on Cloudera)
-  "bintray-spark-packages" at "https://dl.bintray.com/spark-packages/maven/",
   "conjars" at "http://conjars.org/repo"
 )
 
